// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GuideMenu > GuideMenu snapshots > should match snapshot with default props 1`] = `
<div
>

  <button
    class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--sm_HASH_34 _button_HASH_2 _popover-trigger_HASH_2"
    data-ods="popover-trigger"
    aria-label="Guides"
    data-scope="popover"
    data-part="trigger"
    dir="ltr"
    type="button"
    id="popover::r0::trigger"
    aria-haspopup="dialog"
    aria-expanded="false"
    data-state="closed"
    aria-controls=":r1:"
    role="button"
    tabindex="0"
  >

    <span
      class="_icon--book_HASH_55 _icon_HASH_2"
      data-ods="icon"
      role="presentation"
      aria-hidden="true"
    >
    </span
    >Guides
    </button
    >
    </div
    >
`;

exports[`GuideMenu > GuideMenu snapshots > should match snapshot with empty items 1`] = `
<div
>

  <button
    class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--sm_HASH_34 _button_HASH_2 _popover-trigger_HASH_2"
    data-ods="popover-trigger"
    aria-label="Guides"
    data-scope="popover"
    data-part="trigger"
    dir="ltr"
    type="button"
    id="popover::r4::trigger"
    aria-haspopup="dialog"
    aria-expanded="false"
    data-state="closed"
    aria-controls=":r5:"
    role="button"
    tabindex="0"
  >

    <span
      class="_icon--book_HASH_55 _icon_HASH_2"
      data-ods="icon"
      role="presentation"
      aria-hidden="true"
    >
    </span
    >Guides
    </button
    >
    </div
    >
`;

exports[`GuideMenu > GuideMenu snapshots > should match snapshot with loading state 1`] = `
<div
>

  <button
    class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--sm_HASH_34 _button_HASH_2 _popover-trigger_HASH_2"
    data-ods="popover-trigger"
    disabled=""
    aria-label="Guides"
    data-scope="popover"
    data-part="trigger"
    dir="ltr"
    type="button"
    id="popover::r2::trigger"
    aria-haspopup="dialog"
    aria-expanded="false"
    data-state="closed"
    aria-controls=":r3:"
    role="button"
    tabindex="0"
  >

    <span
      class="_button__spinner_HASH_373"
    >

      <span
        class="_spinner--neutral_HASH_26 _spinner--sm_HASH_17 _spinner_HASH_10"
        data-ods="spinner"
        role="none"
      >

        <svg
          aria-hidden="true"
          class="_spinner__svg_HASH_32"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >

          <rect
            fill="none"
            height="24"
            width="24"
          >
          </rect
          >

            <g
              transform="translate(-237.694 -93.932)"
            >

              <path
                d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                transform="translate(5486 4225)"
              >
              </path
              >

                <circle
                  cx="1"
                  cy="1"
                  r="1"
                  transform="translate(248.694 114.932)"
                >
                </circle
                >

                  <circle
                    cx="1"
                    cy="1"
                    r="1"
                    transform="translate(238.694 104.932)"
                  >
                  </circle
                  >
                  </g
                  >
                  </svg
                  >
                  </span
                  >
                  </span
                  >

                    <span
                      class="_icon--book_HASH_55 _icon_HASH_2"
                      data-ods="icon"
                      role="presentation"
                      aria-hidden="true"
                    >
                    </span
                    >Guides
                    </button
                    >
                    </div
                    >
`;

exports[`GuideMenu > GuideMenu snapshots > should match snapshot with single item 1`] = `
<div
>

  <button
    class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--sm_HASH_34 _button_HASH_2 _popover-trigger_HASH_2"
    data-ods="popover-trigger"
    aria-label="Guides"
    data-scope="popover"
    data-part="trigger"
    dir="ltr"
    type="button"
    id="popover::r6::trigger"
    aria-haspopup="dialog"
    aria-expanded="false"
    data-state="closed"
    aria-controls=":r7:"
    role="button"
    tabindex="0"
  >

    <span
      class="_icon--book_HASH_55 _icon_HASH_2"
      data-ods="icon"
      role="presentation"
      aria-hidden="true"
    >
    </span
    >Guides
    </button
    >
    </div
    >
`;
